# PolkitGuard

./: .gitignore  .goreleaser.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT_SPEC.md  README.md  ROADMAP.md  SECURITY.md  config.example.json  config.schema.json  docker-compose.yml  go.mod  hola.txt
.github/workflows/: ci.yml  release.yml
cmd/scan/: integration_test.go  main.go  main_test.go
cmd/validate/: validate.go  validate_test.go
docs/: CVE.md  SECURITY.md  index.html  operator.md  polkitguard.1
examples/: config.debian.json  config.fedora.json  config.rhel.json  config.ubuntu.json  grafana-dashboard.json  polkitguard-ansible.yml  report-with-charts.html
examples/kustomize/: kustomization.yaml
examples/salt/: polkitguard.sls
examples/templates/: default.rules.tpl
integrations/elixir/: polkitguard.exs
integrations/go/: client.go
integrations/haskell/: PolkitGuard.hs
integrations/java/: pom.xml
integrations/node/: package.json
integrations/php/: composer.json
integrations/python/: README.md  pyproject.toml  setup.py
integrations/ruby/: polkitguard.gemspec
integrations/rust/: Cargo.toml
integrations/rust/src/: error.rs  lib.rs  main.rs  models.rs  scanner.rs
integrations/shell/: cron-setup.sh  install.sh  polkitguard-wrapper.sh  scheduled-scan.sh
internal/analyzer/: surface.go  surface_test.go
internal/api/: server.go  server_test.go
internal/audit/: compliance.go
scripts/: aur-release.sh  ci-gate.sh  polkitguard-cron.sh  pre-commit.sh  sbom.sh
testdata/: sample.rules
(+73 files in other folders)
